Reducing size of bb7 scale degree to fix note presentation Only highlighting text, not whitespace for notes in scale group notes

--- a/WebApplication/wwwroot/css/InstrumentPage.css
+++ b/WebApplication/wwwroot/css/InstrumentPage.css
@@ -138,6 +138,8 @@
     cursor: default;
     color: green !important;
     background-color: rgba(52, 255, 152, 0.17) !important;
+    /*Ensures that only text is "highlighted"*/
+    background-clip: content-box;
 }
 
 h1 {
